--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MISTRAL_API_KEY=dzKa5J7ZcEpWajCvTVSZ0icvqyuhJ7U2
 
-MONGO_URI=mongodb+srv://hiretalent-dev:Yulwbmn87x92EQ0U@hiretalent.doscksq.mongodb.net/app-dev
+MONGODB_URI=mongodb+srv://hiretalent-dev:Yulwbmn87x92EQ0U@hiretalent.doscksq.mongodb.net/app-dev
